Sito completo deploy 1

--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
 
                 <!--<div class="about-title"><h1>That's Me</h1></div>-->
                 
-                <div class="about-text"> <p>
+                <div class="about-text real-about-text"> <p>
                     Hi! I’m Massimo and I’m a communication design student at Politecnico di Milano. <br>
                     After experiencing design in all its forms I am now specializing in 3D modeling and design for web. 
                     Down here you can see the main projects developed during my university career. Enjoy! 
@@ -47,16 +47,18 @@
                 </div> 
                 <div class="about-card">
                     <div class="about-info">
-                        <p>
-                        Massimo Pietrucci <br>
-                        Based in: Ancona, Milano <br>
-                        LinkedIn <br>
-                        Behance <br>
-                        Instagram 
-                        </p>
-                    </div> 
+                        <p>Massimo Pietrucci </p>
+                        <p>Based in: Ancona, Milano</p> 
+                        <p> <a href="mailto:massipietrucci@gmail.com"> massipietrucci@gmail.com</a></p>
+
+                        <p><a href="https://www.linkedin.com/in/massimo-pietrucci-610339299/"> LinkedIn</a></p>
+
+                        <p><a href="https://www.behance.net/massimopietruc1"> Behance</a></p>
+
+                        <p><a href="https://www.instagram.com/massipietrucci/"> Instagram</a></p>
+                        </div> 
                     <div class="about-img">
-                        <img src="Media/profilePic.jpg" alt="">
+                        <img src="Media/fotome.png" alt="">
                     </div>
                 </div>
             </div>
@@ -147,7 +149,7 @@
                     </div>
                 </div></a>
 
-                <a href="page1.html">
+                <a href="pagePorcellini.html">
                     <div class="big-card">
                         <div class="card-image">
                             <img src="Media/PorcelliniCover.jpeg" alt="">
@@ -184,24 +186,25 @@
 
 
         <footer>
+            <div class="footerWrap">
+
             <div class="footer-grid">
-                    <p>Contacts:</p>
-                    <p></p>
-                    <p>email</p>
-                    <p class="separator">|</p>
-                    <p>Instagram</p>
-                    <p class="separator">|</p>
-                    <p>Behance</p>
-                    <p class="separator">|</p>
-                    <p>Linkedin</p>
-                <p>Site Map:</p>
-                <p></p>
-                    <p>About</p>
-                    <p class="separator">|</p>
-                    <p>Main projects</p>
-                    <p class="separator">|</p>
-                    <p>Other works</p>
+                    <p style="grid-column: 1; grid-row: 1;">Site Map:</p>
+                    <p style="grid-column: 2; grid-row: 1;"><a href="main.html#about"> About</a></p>
+                    <p style="grid-column: 2; grid-row: 2;"><a href="main.html#projects"> Main projects</a></p>
+                    <p style="grid-column: 2; grid-row: 3;"><a href="main.html#showcase"> Other works</a></p>
             </div>
+
+            <div class="footer-grid">
+                <p style="grid-column: 1; grid-row: 1;">Contacts:</p>
+                <p style="grid-column: 2; grid-row: 1;"> <a href="mailto:massipietrucci@gmail.com"> massipietrucci@gmail.com</a></p>
+                <p style="grid-column: 2; grid-row: 2;"><a href="https://www.linkedin.com/in/massimo-pietrucci-610339299/"> LinkedIn</a></p>
+                <p style="grid-column: 2; grid-row: 3;"><a href="https://www.behance.net/massimopietruc1"> Behance</a></p>
+                <p style="grid-column: 2; grid-row: 4;"><a href="https://www.instagram.com/massipietrucci/"> Instagram</a></p>
+        </div>
+        <div id="copyright">© 2023 Massimo Pietrucci. All rights reserved.</div>
+
+        </div>
            </footer>
 
 
