--- a/pageCarte.html
+++ b/pageCarte.html
@@ -94,17 +94,17 @@ degree view of the square.
         <div class="wrapper"><h1>Info</h1></div>
 
         <div class="wrapper infoTab">
-            <li>Role</li>            <li>Programming, animation</li>
+            <li>Role</li>            <li>Illustration, formatting</li>
 
-            <li>Programs</li>            <li>JavaScript (Phaser 2), Abobe Illustrator</li>
+            <li>Programs</li>            <li>Adobe Illustrator</li>
 
-            <li>Course</li>            <li>Laboratorio di Computer Grafica</li>
+            <li>Course</li>            <li>Laboriatorio di Elementi visivi del Progetto</li>
 
-            <li>Teachers</li>            <li>Maresa Bertolo, Loredana Micoli, Vincenzo Rana</li>
+            <li>Teachers</li>            <li>Umberto Tolino, Massimo Hachen</li>
 
-            <li>AY</li>            <li>2021 / 22</li>
+            <li>AY</li>            <li>2020 / 21</li>
 
-            <li>Group</li>            <li>11 components</li>
+            <li>Group</li>            <li>Gabriele Luvarà, Massimo Pietrucci, Matteo Veronese</li>
 
 
 
@@ -114,27 +114,28 @@ degree view of the square.
 
         
     
-          <footer>
-          <div class="footer-grid">
-                  <p>Contacts:</p>
-                  <p></p>
-                  <p>email</p>
-                  <p class="separator">|</p>
-                  <p>Instagram</p>
-                  <p class="separator">|</p>
-                  <p>Behance</p>
-                  <p class="separator">|</p>
-                  <p>Linkedin</p>
-              <p>Site Map:</p>
-              <p></p>
-                  <p>About</p>
-                  <p class="separator">|</p>
-                  <p>Main projects</p>
-                  <p class="separator">|</p>
-                  <p>Other works</p>
-          </div>
-         </footer>
-        <script>
+      <footer>
+        <div class="footerWrap">
+
+        <div class="footer-grid">
+                <p style="grid-column: 1; grid-row: 1;">Site Map:</p>
+                <p style="grid-column: 2; grid-row: 1;"><a href="main.html#about"> About</a></p>
+                <p style="grid-column: 2; grid-row: 2;"><a href="main.html#projects"> Main projects</a></p>
+                <p style="grid-column: 2; grid-row: 3;"><a href="main.html#showcase"> Other works</a></p>
+        </div>
+
+        <div class="footer-grid">
+            <p style="grid-column: 1; grid-row: 1;">Contacts:</p>
+            <p style="grid-column: 2; grid-row: 1;"> <a href="mailto:massipietrucci@gmail.com"> massipietrucci@gmail.com</a></p>
+            <p style="grid-column: 2; grid-row: 2;"><a href="https://www.linkedin.com/in/massimo-pietrucci-610339299/"> LinkedIn</a></p>
+            <p style="grid-column: 2; grid-row: 3;"><a href="https://www.behance.net/massimopietruc1"> Behance</a></p>
+            <p style="grid-column: 2; grid-row: 4;"><a href="https://www.instagram.com/massipietrucci/"> Instagram</a></p>
+    </div>
+    <div id="copyright">© 2023 Massimo Pietrucci. All rights reserved.</div>
+
+    </div>
+       </footer>
+<script>
         </script>
     </body>
 </html>
