--- a/pagePinocchio.html
+++ b/pagePinocchio.html
@@ -155,27 +155,26 @@
 
         
     
-          <footer>
-          <div class="footer-grid">
-                  <p>Contacts:</p>
-                  <p></p>
-                  <p>email</p>
-                  <p class="separator">|</p>
-                  <p>Instagram</p>
-                  <p class="separator">|</p>
-                  <p>Behance</p>
-                  <p class="separator">|</p>
-                  <p>Linkedin</p>
-              <p>Site Map:</p>
-              <p></p>
-                  <p>About</p>
-                  <p class="separator">|</p>
-                  <p>Main projects</p>
-                  <p class="separator">|</p>
-                  <p>Other works</p>
-          </div>
-         </footer>
-        <script>
-        </script>
-    </body>
+      <footer>
+        <div class="footerWrap">
+
+        <div class="footer-grid">
+                <p style="grid-column: 1; grid-row: 1;">Site Map:</p>
+                <p style="grid-column: 2; grid-row: 1;"><a href="main.html#about"> About</a></p>
+                <p style="grid-column: 2; grid-row: 2;"><a href="main.html#projects"> Main projects</a></p>
+                <p style="grid-column: 2; grid-row: 3;"><a href="main.html#showcase"> Other works</a></p>
+        </div>
+
+        <div class="footer-grid">
+            <p style="grid-column: 1; grid-row: 1;">Contacts:</p>
+            <p style="grid-column: 2; grid-row: 1;"> <a href="mailto:massipietrucci@gmail.com"> massipietrucci@gmail.com</a></p>
+            <p style="grid-column: 2; grid-row: 2;"><a href="https://www.linkedin.com/in/massimo-pietrucci-610339299/"> LinkedIn</a></p>
+            <p style="grid-column: 2; grid-row: 3;"><a href="https://www.behance.net/massimopietruc1"> Behance</a></p>
+            <p style="grid-column: 2; grid-row: 4;"><a href="https://www.instagram.com/massipietrucci/"> Instagram</a></p>
+    </div>
+    <div id="copyright">© 2023 Massimo Pietrucci. All rights reserved.</div>
+
+    </div>
+       </footer>
+</body>
 </html>
