--- a/pagePorcellini.html
+++ b/pagePorcellini.html
@@ -40,53 +40,42 @@
 
 
 
+              <div class="content-wrap">
+
+                <div class="sketchfab-embed-wrapper wrapper" id="sketchFabFrame" style="padding-top: 150px; padding-bottom: 80px;"> 
+                  <iframe title="Three Little Bricks | Set Model" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share 
+                  height="100%"  src="https://sketchfab.com/models/55c4142a85fa4d9cabf490beb4aa4dd4/embed"> 
+                </iframe> </div>
 
 
-        <div class="wrapper full-width" style="padding-top: 150px;">
-          <img src="Media/Carte/MockupCarte3.png" alt="">
-        </div>
 
         <div class="wrapper">
 
           <div class="about-text page-intro paddingBottom1">
-            <h2>Le Piazze di Milano</h2>
+            <h2>Three Little Bricks</h2>
               <p>
-                The deck of playing cards, designed for a
-university workshop, represents four of the
-main squares in Milan, each characterized
-by a key color. The illustration on the cards,
-when placed side by side, forms a 360-
-degree view of the square.
+                A transmedia retelling of the classic story of the three little pigs. 
+                The instruction manual allows you to build the world of the three little pigs with Lego 
+                to experience the story in a different and unique way. 
+                The 3D model can also be explored online.
               </p>
         </div>
 
   </div>
 
 
-  <div class="wrapper wOrizzontale ">
-    <img src="Media/Carte/mockupcarte5.png" alt="">
-    <img src="Media/Carte/mockupcarte9edit.png" alt="">
-
+  <div class="wrapper wOrizzontale full-width" style="padding-bottom: 20px;">
+    <img src="Media/PorcelliniCover.jpeg" alt="">
+    <img src="Media/Porcellini/pag4.png" alt="">
+    <img src="Media/Porcellini/pag3.png" alt="">
+  </div>
+  <div class="wrapper wOrizzontale full-width  paddingBottom1">
+    <img src="Media/Porcellini/pag2.png" alt="">
+    <img src="Media/Porcellini/pag1.png" alt="">
+    <img src="Media/PorcelliniRender.png" alt="">
   </div>
 
-  <div class="wrapper about-text paddingTop1 paddingBottom1">
-          <p>The cards are arranged based on the number of characteristic subjects
-            populating the square, whether it’s the pigeons counted in Piazza
-            Duomo or the tourists in Piazza Castello. The reversible pattern that
-            fills the back of the deck is designed from the silhouette of the main
-            buildings in each square. Square visitors—children, women, and men—
-            are detailed for the Jack (J), Queen (Q), and King (K) cards, placed in
-            characteristic sections of the squares.</p>
-        </div>
 
-      </div>
-
-      <div class="content-wrap">
-
-        <div class="wrapper paddingTop1 paddingBottom1">
-          <img src="Media/Carte/mockupcarte8blur.png" alt="">
-
-        </div>
 
       </div>
       <div class="content-wrap">
@@ -94,17 +83,17 @@ degree view of the square.
         <div class="wrapper"><h1>Info</h1></div>
 
         <div class="wrapper infoTab">
-            <li>Role</li>            <li>Programming, animation</li>
+            <li>Role</li>            <li>3D Modeling</li>
 
-            <li>Programs</li>            <li>JavaScript (Phaser 2), Abobe Illustrator</li>
+            <li>Programs</li>            <li>Blender</li>
 
-            <li>Course</li>            <li>Laboratorio di Computer Grafica</li>
+            <li>Course</li>            <li>Sociologia dei Processi Culturali</li>
 
-            <li>Teachers</li>            <li>Maresa Bertolo, Loredana Micoli, Vincenzo Rana</li>
+            <li>Teachers</li>            <li>Matteo Ciastellardi</li>
 
             <li>AY</li>            <li>2021 / 22</li>
 
-            <li>Group</li>            <li>11 components</li>
+            <li>Group</li>            <li>Chiara Compagnoni, Giorgia Maggiolini, massimo Pietrucci, Matteo Semeraro, Beatrice Tronconi, Costanza Turi, Ilaria Urgesi</li>
 
 
 
@@ -112,29 +101,30 @@ degree view of the square.
 
       </div>
 
+        </div>
+
         
     
-          <footer>
+        <footer>
+          <div class="footerWrap">
+
           <div class="footer-grid">
-                  <p>Contacts:</p>
-                  <p></p>
-                  <p>email</p>
-                  <p class="separator">|</p>
-                  <p>Instagram</p>
-                  <p class="separator">|</p>
-                  <p>Behance</p>
-                  <p class="separator">|</p>
-                  <p>Linkedin</p>
-              <p>Site Map:</p>
-              <p></p>
-                  <p>About</p>
-                  <p class="separator">|</p>
-                  <p>Main projects</p>
-                  <p class="separator">|</p>
-                  <p>Other works</p>
+                  <p style="grid-column: 1; grid-row: 1;">Site Map:</p>
+                  <p style="grid-column: 2; grid-row: 1;"><a href="main.html#about"> About</a></p>
+                  <p style="grid-column: 2; grid-row: 2;"><a href="main.html#projects"> Main projects</a></p>
+                  <p style="grid-column: 2; grid-row: 3;"><a href="main.html#showcase"> Other works</a></p>
           </div>
+
+          <div class="footer-grid">
+              <p style="grid-column: 1; grid-row: 1;">Contacts:</p>
+              <p style="grid-column: 2; grid-row: 1;"> <a href="mailto:massipietrucci@gmail.com"> massipietrucci@gmail.com</a></p>
+              <p style="grid-column: 2; grid-row: 2;"><a href="https://www.linkedin.com/in/massimo-pietrucci-610339299/"> LinkedIn</a></p>
+              <p style="grid-column: 2; grid-row: 3;"><a href="https://www.behance.net/massimopietruc1"> Behance</a></p>
+              <p style="grid-column: 2; grid-row: 4;"><a href="https://www.instagram.com/massipietrucci/"> Instagram</a></p>
+      </div>
+      <div id="copyright">© 2023 Massimo Pietrucci. All rights reserved.</div>
+
+      </div>
          </footer>
-        <script>
-        </script>
-    </body>
+</body>
 </html>
