--- a/pageSurreale.html
+++ b/pageSurreale.html
@@ -94,15 +94,12 @@
     </div>
 
       <div class="content-wrap">
-        <div class="wrapper wOrizzontale">
-          <video autoplay muted loop> <source src="Media/Surreale/filtro.mp4">
-          
+        <div class="wrapper wOrizzontale full-width" id="surrealeInstaVid">
+          <video autoplay muted loop class="parallelVideo"> <source src="Media/Surreale/insta.mp4">
           </video>
-
-
-
+          <video autoplay muted loop class="parallelVideo"> <source src="Media/Surreale/filtro.mp4">
+          </video>
         </div>
-
 
         <div class="wrapper about-text paddingTop1 paddingBottom1">
               <p>
@@ -113,52 +110,21 @@
         </div>
 
         <div class="wrapper ">
-          <img src="Media/Nuraxi/SuNuraxi1.png" alt="">  
-        </div>
-
-        <div class="wrapper paddingTop1">
-          <img src="Media/Nuraxi/segnaletica.png" alt="">  
+          <video autoplay muted loop> <source src="Media/Surreale/sito.mp4">
+          </video>
         </div>
 
 
         <div class="wrapper about-text paddingTop1 paddingBottom1">
           <p>
-            To facilitate visitors to the archaeological site, a new signage
-            system has been designed, accompanied by an advertising campaign
-            consisting of four posters.
-          </p>        
-        </div>
-
-        <div class="wrapper ">
-          <img src="Media/Nuraxi/mockupiphonz2.png" alt="">  
-        </div>
-
-
-
-        <div class="wrapper about-text paddingTop1 ">
-          <p>
-            To further enhance the visitor experience, an application has been designed
-            that provides tourists with ‘nuggets’ of Nuragic culture in the
-            form of quizzes and interactive challenges. The app also allows users to
-            visualize ancient architecture through augmented reality and facilitates
-            the visit booking process.                    
-          </p>        
-        </div>
-
-        <div class="wrapper ">
-          <img src="Media/Nuraxi/mockupiphonz4.png" alt="">  
-        </div>
-
-
-
-        <div class="wrapper about-text  paddingBottom1">
-          <p>
-            To increase visibility for the archaeological site on social media channels,
-            an Instagram page has been created, providing information about
-            events and tips for visiting. Additionally, two horizontal format videos
-            have been produced to advertise the updates made to the archaeological
-            site’s identity.
-                    </p>        
+            The homepage welcomes users with an overview of the website’s
+            content and provides information about the activities and events available
+            during the Civil Week. <br>
+            In addition to the informational section, the website features interactive
+            experiences such as the ‘Talent Calendar’ and the ‘Volunteering
+            Generator,’ aiming to inspire young individuals to engage in spontaneous
+            volunteer actions.           
+           </p>        
         </div>
 
 
@@ -169,42 +135,41 @@
         <div class="wrapper"><h1>Info</h1></div>
 
         <div class="wrapper infoTab">
-            <li>Role</li>            <li>Programming, animation</li>
+            <li>Role</li>            <li>Website design, VFX, Instagram filter</li>
 
-            <li>Programs</li>            <li>JavaScript (Phaser 2), Abobe Illustrator</li>
+            <li>Programs</li>            <li>Figma, Adobe After Effects, Meta Spark Studio</li>
 
-            <li>Course</li>            <li>Laboratorio di Computer Grafica</li>
+            <li>Course</li>            <li>Laboratorio di Sintesi Finale - C2</li>
 
-            <li>Teachers</li>            <li>Maresa Bertolo, Loredana Micoli, Vincenzo Rana</li>
+            <li>Teachers</li>            <li>Valeria Bucchetti, Umberto Tolino, Pamela Visconti</li>
 
-            <li>AY</li>            <li>2021 / 22</li>
+            <li>AY</li>            <li>2022 / 23</li>
 
-            <li>Group</li>            <li>11 components</li>
+            <li>Group</li>            <li>Daniele Galbusera, Luca GOttifredi, Giovanni Malausa, Massimo Pietrucci, Paola Rapino</li>
 
         </div>
       </div>
 
       <footer>
+        <div class="footerWrap">
+
         <div class="footer-grid">
-              <p>Contacts:</p>
-              <p></p>
-              <p>email</p>
-              <p class="separator">|</p>
-              <p>Instagram</p>
-              <p class="separator">|</p>
-              <p>Behance</p>
-              <p class="separator">|</p>
-              <p>Linkedin</p>
-          <p>Site Map:</p>
-          <p></p>
-              <p>About</p>
-              <p class="separator">|</p>
-              <p>Main projects</p>
-              <p class="separator">|</p>
-              <p>Other works</p>
+                <p style="grid-column: 1; grid-row: 1;">Site Map:</p>
+                <p style="grid-column: 2; grid-row: 1;"><a href="main.html#about"> About</a></p>
+                <p style="grid-column: 2; grid-row: 2;"><a href="main.html#projects"> Main projects</a></p>
+                <p style="grid-column: 2; grid-row: 3;"><a href="main.html#showcase"> Other works</a></p>
         </div>
-      </footer>
-        <script>
-        </script>
-    </body>
+
+        <div class="footer-grid">
+            <p style="grid-column: 1; grid-row: 1;">Contacts:</p>
+            <p style="grid-column: 2; grid-row: 1;"> <a href="mailto:massipietrucci@gmail.com"> massipietrucci@gmail.com</a></p>
+            <p style="grid-column: 2; grid-row: 2;"><a href="https://www.linkedin.com/in/massimo-pietrucci-610339299/"> LinkedIn</a></p>
+            <p style="grid-column: 2; grid-row: 3;"><a href="https://www.behance.net/massimopietruc1"> Behance</a></p>
+            <p style="grid-column: 2; grid-row: 4;"><a href="https://www.instagram.com/massipietrucci/"> Instagram</a></p>
+    </div>
+    <div id="copyright">© 2023 Massimo Pietrucci. All rights reserved.</div>
+
+    </div>
+       </footer>
+</body>
 </html>
