--- a/pagePorcellini.html
+++ b/pagePorcellini.html
@@ -26,12 +26,12 @@
                   <div class="hamburgerBar"></div>
                   <div class="hamburgerBar"></div>
                 </div>
-                <div id="logo"><a href="main.html#about"><img src="Media/FirmaBianca@4x.png" alt=""></a></div>
+                <div id="logo"><a href="index.html#about"><img src="Media/FirmaBianca@4x.png" alt=""></a></div>
                 
                 <ul>
-                  <li><a href="main.html#about">About</a></li>
-                  <li><a href="main.html#projects">Projects</a></li>
-                  <li><a href="main.html#showcase">Other Works</a></li>
+                  <li><a href="index.html#about">About</a></li>
+                  <li><a href="index.html#projects">Projects</a></li>
+                  <li><a href="index.html#showcase">Other Works</a></li>
                 </ul>
               </div>
 
@@ -110,9 +110,9 @@
 
           <div class="footer-grid">
                   <p style="grid-column: 1; grid-row: 1;">Site Map:</p>
-                  <p style="grid-column: 2; grid-row: 1;"><a href="main.html#about"> About</a></p>
-                  <p style="grid-column: 2; grid-row: 2;"><a href="main.html#projects"> Main projects</a></p>
-                  <p style="grid-column: 2; grid-row: 3;"><a href="main.html#showcase"> Other works</a></p>
+                  <p style="grid-column: 2; grid-row: 1;"><a href="index.html#about"> About</a></p>
+                  <p style="grid-column: 2; grid-row: 2;"><a href="index.html#projects"> Main projects</a></p>
+                  <p style="grid-column: 2; grid-row: 3;"><a href="index.html#showcase"> Other works</a></p>
           </div>
 
           <div class="footer-grid">
