--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#showcase">Other Works</a></li>
+                <li><a href="#showcase">Photo Gallery</a></li>
                 </ul>
             </div>
 
@@ -39,10 +39,14 @@
 
                 <!--<div class="about-title"><h1>That's Me</h1></div>-->
                 
-                <div class="about-text real-about-text"> <p>
-                    Hi! I’m Massimo and I’m a communication design graduate at Politecnico di Milano. <br>
-                    After experiencing design in all its forms I am now specializing in UI/UX and design for web. 
-                    Down here you can see the main projects developed during my university career. Enjoy! 
+                <div class="about-text"> <p>
+                    Hi! I’m Massimo, a recent graduate from Politecnico di Milano. 
+                    Throughout my studies, I explored design in its many forms, 
+                    and I’m now working as a graphic designer at Veolia. 
+                    I’m passionate about diving deeper into UI and web design, 
+                    while also enjoying amateur photography in my free time. Below, 
+                    you'll find a selection of my key projects, both from my academic journey and personal pursuits. 
+                    I hope you enjoy exploring them!
                 </p>
                 </div> 
                 <div class="about-card">
@@ -119,6 +123,22 @@
                     </div>
                 </div></a>
 
+                <a href="pageMoneyme.html">
+                    <div class="big-card">
+                        <div class="card-image">
+                            <img src="Media/moneyme/PreviewMoneyme.jpg" alt="">
+                        </div>
+                        <div class="card-text">
+                            <h2>Money.Me</h2>
+                            <p>
+                                Money.me is an AI-powered web app designed to teach users about finance and smart investing. 
+                                Developed during the GDSC AI Hackathon, it offers personalized financial advice, contract analysis,
+                                 and easy-to-understand visual comparisons. With a clean, user-friendly interface and engaging features,
+                                  Money.me helps users make informed decisions while learning key financial concepts.
+                            </p>
+                        </div>
+                    </div></a>
+
                 <a href="pageCarte.html">
                 <div class="big-card">
                     <div class="card-image">
@@ -166,21 +186,29 @@
                     </div></a>
 
             </div>
-<div class="wrapper paddingBottom1" id="showcase"><h1>Other Works</h1></div>
+            
+<div class="wrapper paddingBottom1" id="showcase"> <!--<h1>Other Works</h1>--></div> 
 
 <div class="showcase wrapper" >
-    <div class="card"><img src="Media/Copertina Animata.gif" alt=""></div>
-    <div class="card"><img src="Media/Moto.jpg" alt=""></div>
-    <div class="card"><img src="Media/IMG_9985.jpg" alt=""></div>
-    <div class="card"><img src="Media/SailingPoster.jpg" alt=""></div>
-    <div class="card"><img src="Media/Baru.jpg" alt=""></div>
-    <div class="card"><img src="Media/Logo DesignVersoRisorsa 3.png" alt=""></div>
-    <div class="card"><img src="Media/pinocchio1.jpg" alt=""></div>
-    <div class="card"><img src="Media/PorcelliniRender.png" alt=""></div>
-    <div class="card"><img src="Media/PXL_20220207_161022484.jpg" alt=""></div>
-    <div class="card"><img src="Media/TipografiaArcade.jpg" alt=""></div>
+    <div class="card"><img src="Media/gallery/IMG_2702.jpg" alt=""></div>
+    <div class="card about-text"> <div ><h1 id="photoGalleryTitle">Photo Gallery</h1></div></div>
+    <div class="card"><img src="Media/gallery/NrkpLftn-305.jpg" alt=""></div>
+    <div class="card"><img src="Media/gallery/Colombia-6098.jpg" alt=""></div>
+    <div class="card"><img src="Media/gallery/BovisaStreet-5422.jpg" alt=""></div>
+    <div class="card about-text"><p id="photoGalleryBio"> 
+        I'm an amateur photographer with a passion for capturing moments during my travels and on the streets. 
+        While I don't shoot professionally, photography has become a valuable asset in my design process, 
+        offering fresh perspectives and inspiration that enhance my creative work.
+    </p></div>
+    <div class="card"><img src="Media/gallery/NrkpLftn-300.jpg" alt=""></div>
 
-
+    <div class="card"><img src="Media/gallery/GothemburgInsta-194.jpg" alt=""></div>
+    <div class="card about-text"></div>
+    <div class="card"><img src="Media/gallery/Colombia-6124.jpg" alt=""></div>
+    <div class="card"><img src="Media/gallery/Colombia-5915.jpg" alt=""></div>
+    <div class="card"><img src="Media/gallery/BovisaStreet-4304.jpg" alt=""></div>
+    <div class="card about-text"> </div>
+    <div class="card"><img src="Media/gallery/Colombia--4.jpg" alt=""></div>
 </div>
 </div>
 
@@ -192,7 +220,7 @@
                     <p style="grid-column: 1; grid-row: 1;">Site Map:</p>
                     <p style="grid-column: 2; grid-row: 1;"><a href="index.html#about"> About</a></p>
                     <p style="grid-column: 2; grid-row: 2;"><a href="index.html#projects"> Main projects</a></p>
-                    <p style="grid-column: 2; grid-row: 3;"><a href="index.html#showcase"> Other works</a></p>
+                    <p style="grid-column: 2; grid-row: 3;"><a href="index.html#showcase"> Photo Gallery</a></p>
             </div>
 
             <div class="footer-grid">
