--- a/pageSurreale.html
+++ b/pageSurreale.html
@@ -145,7 +145,7 @@
 
             <li>AY</li>            <li>2022 / 23</li>
 
-            <li>Group</li>            <li>Daniele Galbusera, Luca GOttifredi, Giovanni Malausa, Massimo Pietrucci, Paola Rapino</li>
+            <li>Group</li>            <li>Daniele Galbusera, Luca Gottifredi, Giovanni Malausa, Massimo Pietrucci, Paola Rapino</li>
 
         </div>
       </div>
