--- a/pagePorcellini.html
+++ b/pagePorcellini.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+      <title>Massimo Pietrucci Portfolio</title>
+      <link rel="icon" type="image/x-icon" href="logoiconV2.png" style="object-fit: cover;">
+
         <meta charset="UTF8">
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="hamburger.css">
@@ -31,7 +35,7 @@
                 <ul>
                   <li><a href="index.html#about">About</a></li>
                   <li><a href="index.html#projects">Projects</a></li>
-                  <li><a href="index.html#showcase">Other Works</a></li>
+                  <li><a href="index.html#showcase">Photo Gallery</a></li>
                 </ul>
               </div>
 
@@ -65,14 +69,14 @@
 
 
   <div class="wrapper wOrizzontale full-width" style="padding-bottom: 20px;">
-    <img src="Media/PorcelliniCover.jpeg" alt="">
+    <img src="Media/Porcellini/PorcelliniCover.jpeg" alt="">
     <img src="Media/Porcellini/pag4.png" alt="">
     <img src="Media/Porcellini/pag3.png" alt="">
   </div>
   <div class="wrapper wOrizzontale full-width  paddingBottom1">
     <img src="Media/Porcellini/pag2.png" alt="">
     <img src="Media/Porcellini/pag1.png" alt="">
-    <img src="Media/PorcelliniRender.png" alt="">
+    <img src="Media/Porcellini/PorcelliniRender.png" alt="">
   </div>
 
 
@@ -111,15 +115,15 @@
           <div class="footer-grid">
                   <p style="grid-column: 1; grid-row: 1;">Site Map:</p>
                   <p style="grid-column: 2; grid-row: 1;"><a href="index.html#about"> About</a></p>
-                  <p style="grid-column: 2; grid-row: 2;"><a href="index.html#projects"> Main projects</a></p>
-                  <p style="grid-column: 2; grid-row: 3;"><a href="index.html#showcase"> Other works</a></p>
+                  <p style="grid-column: 2; grid-row: 2;"><a href="index.html#projects"> Projects</a></p>
+                  <p style="grid-column: 2; grid-row: 3;"><a href="index.html#showcase"> Photo Gallery</a></p>
           </div>
 
           <div class="footer-grid">
               <p style="grid-column: 1; grid-row: 1;">Contacts:</p>
               <p style="grid-column: 2; grid-row: 1;"> <a href="mailto:massipietrucci@gmail.com"> massipietrucci@gmail.com</a></p>
               <p style="grid-column: 2; grid-row: 2;"><a href="https://www.linkedin.com/in/massimo-pietrucci-610339299/"> LinkedIn</a></p>
-              <p style="grid-column: 2; grid-row: 3;"><a href="https://www.behance.net/massimopietruc1"> Behance</a></p>
+              <p style="grid-column: 2; grid-row: 3;"><a href="https://github.com/SwagBoy2000"> GitHub</a></p>
               <p style="grid-column: 2; grid-row: 4;"><a href="https://www.instagram.com/massipietrucci/"> Instagram</a></p>
       </div>
       <div id="copyright">© 2023 Massimo Pietrucci. All rights reserved.</div>
