New Veolia Page
+ image optimization
+ small optimizations and fixes

--- a/pageCarte.html
+++ b/pageCarte.html
@@ -68,8 +68,8 @@ degree view of the square.
 
 
   <div class="wrapper wOrizzontale ">
-    <img src="Media/Carte/mockupcarte5.png" alt="">
-    <img src="Media/Carte/mockupcarte9edit.png" alt="">
+    <img src="Media/Carte/mockupcarte5.jpg" alt="">
+    <img src="Media/Carte/mockupcarte9edit.jpg" alt="">
 
   </div>
 
@@ -88,7 +88,7 @@ degree view of the square.
       <div class="content-wrap">
 
         <div class="wrapper paddingTop1 paddingBottom1">
-          <img src="Media/Carte/mockupcarte8blur.png" alt="">
+          <img src="Media/Carte/mockupcarte8blur.jpg" alt="">
 
         </div>
 
