--- a/pageTipografia.html
+++ b/pageTipografia.html
@@ -69,8 +69,8 @@
 
 
   <div class="wrapper wOrizzontale ">
-    <img src="Media/Tipografia/detail.png" alt="">
-    <img src="Media/Tipografia/detail2.png" alt="">
+    <img src="Media/Tipografia/detail.jpg" alt="">
+    <img src="Media/Tipografia/detail2.jpg" alt="">
 
   </div>
 
