Logo Fix 1st try

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link deg rel="JavaScript" href="menuHide.js">
         <script src="menuHide.js" defer></script>
 
-        <meta name="viewport" content="width=device-width, initialscale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
          <script>
             function toggleActive(elementId) {
               document.getElementById(elementId).classList.toggle("active");
@@ -112,7 +112,7 @@
                                 I worked as a graphic design intern in the Communication Office. 
                                 I contributed to various corporate projects, ensuring visual communication 
                                 aligned with Veolia’s branding and sustainability goals. 
-                                During this time I large variety of artifacts, such as: posters, newsletters, 
+                                During this time I worked on a large variety of artifacts, such as: posters, newsletters, 
                                 social media, video, for internal and external communication.
                             </p>
                         </div>
