--- a/index.html
+++ b/index.html
@@ -48,19 +48,18 @@
                 <!--<div class="about-title"><h1>That's Me</h1></div>-->
                 
                 <div class="real-about-text"> <p>
-                    Hi! I’m Massimo, a recent graduate from Politecnico di Milano. 
-                    Throughout my studies, I explored design in its many forms, 
-                    and I’m now working as a graphic designer at Veolia. 
-                    I’m passionate about diving deeper into UI and web design, 
-                    while also enjoying amateur photography in my free time. Below, 
-                    you'll find a selection of my key projects, both from my academic journey and personal pursuits. 
-                    I hope you enjoy exploring them!
+                    Hi, I’m Massimo and I love tackling complex design challenges. 
+                    I studied communication design at Politecnico di Milano, 
+                    and then worked at Veolia, where I experienced the corporate environment. 
+                    I am confident with the Adobe Suite and I like to experiment with photography and web design. 
+                    Currently learning German, I am eager to grow alongside industry experts. 
+                    Below, you'll find a selection of my projects. I hope you enjoy exploring them!
                 </p>
                 </div> 
                 <div class="about-card">
                     <div class="about-info">
                         <p>Massimo Pietrucci </p>
-                        <p>Based in: Ancona, Milano</p> 
+                        <p>Based in: Hamburg</p> 
                         <p> <a href="mailto:massipietrucci@gmail.com"> massipietrucci@gmail.com</a></p>
 
                         <p><a href="https://www.linkedin.com/in/massimo-pietrucci-610339299/"> LinkedIn</a></p>
